--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -37,3 +37,11 @@
   border: 1px solid black;
   margin: 2px;
 }
+
+.firstEvent div {
+  font-weight: bold;
+}
+
+.firstEvent {
+  background-color: goldenrod;
+}
