--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,10 +2,17 @@
 @import './messages.css';
 
 
+body{
+  background-image: url("../assets/earth.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
+}
+
+
 
 .renderArea{
   display: flex;
-  
 }
 .friendsContainer{
   flex-basis: 25%;
@@ -75,7 +82,7 @@ ul{
 
 .picSize {
   width: 160px;
-  height: 100px
+  height: 150px
 }
 
 .hidden {
@@ -89,6 +96,7 @@ ul{
   
 }
 
+
 .eventCard {
   border: 1px solid black;
   margin: 2px;
@@ -99,7 +107,7 @@ ul{
 }
 
 .firstEvent {
-  background-color: goldenrod;
+  background-color: rgba(218, 165, 32, 0.726);
 }
 
 .newsContainer{
@@ -107,6 +115,7 @@ ul{
   overflow-y: auto;
   margin-bottom: 30px;
 }
+
 
 .messagesContainer{
   padding: 5px;
