added spacing between the input fields on the register form

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -130,3 +130,11 @@ ul{
 .lineBreak{
   border-bottom: 2px solid black;
 }
+
+
+.registerEmailContainer{
+  margin-bottom: 19px;
+}
+.registerUserContainer{
+  margin-bottom: 19px;
+}
